--- a/downstream/modules/platform/proc-controller-configure-secret-lookups.adoc
+++ b/downstream/modules/platform/proc-controller-configure-secret-lookups.adoc
@@ -13,15 +13,15 @@ Use the following procedure to use {ControllerName} to configure and use each of
 .Procedure
 . Create an external credential for authenticating with the secret management system. At minimum, give a name for the external credential and select one of the following for the *Credential Type* field:
 +
-* xref:ref-aws-secrets-manager-lookup[AWS Secrets Manager Lookup]
-* xref:ref-centrify-vault-lookup[Centrify Vault Credential Provider Lookup]
-* xref:ref-cyberark-ccp-lookup[CyberArk Central Credential Provider (CCP) Lookup]
-* xref:ref-cyberark-conjur-lookup[CyberArk Conjur Secrets Manager Lookup]
-* xref:ref-hashicorp-vault-lookup[HashiCorp Vault Secret Lookup]
-* xref:ref-hashicorp-signed-ssh[HashiCorp Vault Signed SSH]
-* xref:ref-azure-key-vault-lookup[{Azure} Key Vault]
-* xref:ref-thycotic-devops-vault[Thycotic DevOps Secrets Vault]
-* xref:ref-thycotic-secret-server[Thycotic Secret Server]
+* TBD[AWS Secrets Manager Lookup]
+* TBD[Centrify Vault Credential Provider Lookup]
+* TBD[CyberArk Central Credential Provider (CCP) Lookup]
+* TBDCyberArk Conjur Secrets Manager Lookup]
+* TBD[HashiCorp Vault Secret Lookup]
+* TBD[HashiCorp Vault Signed SSH]
+* TBD[{Azure} Key Vault]
+* TBD[Thycotic DevOps Secrets Vault]
+* TBD[Thycotic Secret Server]
 +
 In this example, the _Demo Credential_ is the target credential.
 
