--- a/downstream/modules/platform/ref-controller-credential-types.adoc
+++ b/downstream/modules/platform/ref-controller-credential-types.adoc
@@ -6,6 +6,10 @@
 
 * xref:ref-controller-credential-aws[Amazon Web Services]
 * xref:ref-controller-credential-galaxy-hub[{Galaxy}/Automation Hub API Token]
+//added AWS Secrets Manager Lookup
+* xref:ref-controller-aws-secrets-lookup[AWS Secrets Manager Lookup]
+//added Bitbucket Data Center HTTP Access Token
+* xref:ref-controller-credential-bitbucket[Bitbucket Data Center HTTP Access Token]
 * xref:ref-controller-credential-centrify-vault[Centrify Vault Credential Provider Lookup]
 * xref:ref-controller-credential-container-registry[Container Registry]
 * xref:ref-controller-credential-cyberark-central[CyberArk Central Credential Provider Lookup]
@@ -27,11 +31,12 @@
 * xref:ref-controller-credential-satellite[Red Hat Satellite 6]
 * xref:ref-controller-credential-virtualization[Red Hat Virtualization]
 * xref:ref-controller-credential-source-control[Source Control]
+* xref:ref-controller-credential-terraform[Terraform Backend Configuration]
 * xref:ref-controller-credential-thycotic-vault[Thycotic DevOps Secrets Vault]
 * xref:ref-controller-credential-thycotic-server[Thycotic Secret Server]
 * xref:ref-controller-credential-vault[Vault]
 * xref:ref-controller-credential-vmware-vcenter[VMware vCenter]
 
-The credential types associated with Centrify, CyberArk, HashiCorp Vault, {Azure} Key Vault, and Thycotic are part of the credential plugins capability that enables an external system to lookup your secrets information. 
+The credential types associated with AWS Secrets Manager, Centrify, CyberArk, HashiCorp Vault, {Azure} Key Vault, and Thycotic are part of the credential plugins capability that enables an external system to lookup your secrets information. 
 
-For more information, see xref:assembly-controller-secret-management[Secrets Management System].
+For more information, see TBD[Secrets Management System].
