--- a/downstream/titles/controller/controller-user-guide/master.adoc
+++ b/downstream/titles/controller/controller-user-guide/master.adoc
@@ -60,8 +60,8 @@ include::platform/assembly-controller-ee-setup-reference.adoc[leveloffset=+1]
 //include::platform/assembly-controller-users.adoc[leveloffset=+1]
 //include::platform/assembly-controller-teams.adoc[leveloffset=+1]
 //Possibly in Donna's credentials document
-//include::platform/assembly-controller-credentials.adoc[leveloffset=+1]
-//include::platform/assembly-controller-custom-credentials.adoc[leveloffset=+1]
+include::platform/assembly-controller-credentials.adoc[leveloffset=+1]
+include::platform/assembly-controller-custom-credentials.adoc[leveloffset=+1]
 //Moved to admin guide
 //include::platform/assembly-controller-secret-management.adoc[leveloffset=+1]
 //include::platform/assembly-controller-applications.adoc[leveloffset=+1]
