--- a/downstream/assemblies/platform/assembly-controller-credentials.adoc
+++ b/downstream/assemblies/platform/assembly-controller-credentials.adoc
@@ -1,16 +1,16 @@
 [id="controller-credentials"]
 
-ifdef::controller-GS[]
-= Managing credentials
+//ifdef::controller-GS[]
+//= Managing credentials
 
 
-Credentials authenticate the controller user to launch Ansible playbooks. The passwords and SSH keys are used to authenticate against inventory hosts. 
-By using the credentials feature of {ControllerName}, you can require the {ControllerName} user to enter a password or key phrase when a playbook launches.
+//Credentials authenticate the controller user to launch Ansible playbooks. The passwords and SSH keys are used to authenticate against inventory hosts. 
+//By using the credentials feature of {ControllerName}, you can require the {ControllerName} user to enter a password or key phrase when a playbook launches.
 
-include::platform/proc-controller-create-credential.adoc[leveloffset=+1]
-include::platform/proc-controller-edit-credential.adoc[leveloffset=+1]
-endif::controller-GS[]
-ifdef::controller-UG[]
+//include::platform/proc-controller-create-credential.adoc[leveloffset=+1]
+//include::platform/proc-controller-edit-credential.adoc[leveloffset=+1]
+//endif::controller-GS[]
+//ifdef::controller-UG[]
 
 = Managing user credentials
 
@@ -37,6 +37,10 @@ include::platform/proc-controller-add-users-job-templates.adoc[leveloffset=+1]
 include::platform/ref-controller-credential-types.adoc[leveloffset=+1]
 include::platform/ref-controller-credential-aws.adoc[leveloffset=+2]
 include::platform/ref-controller-credential-galaxy-hub.adoc[leveloffset=+2]
+//AWS Secrets Manager Lookup
+include::platform/ref-controller-aws-secrets-lookup.adoc[leveloffset=+2]
+//Bitbucket
+include::platform/ref-controller-credential-bitbucket.adoc[leveloffset=+2]
 include::platform/ref-controller-credential-centrify-vault.adoc[leveloffset=+2]
 include::platform/ref-controller-credential-container-registry.adoc[leveloffset=+2]
 include::platform/ref-controller-credential-cyberark-central.adoc[leveloffset=+2]
@@ -67,5 +71,5 @@ include::platform/ref-controller-credential-vault.adoc[leveloffset=+2]
 include::platform/ref-controller-credential-vmware-vcenter.adoc[leveloffset=+2]
 include::platform/ref-controller-use-credentials-in-playbooks.adoc[leveloffset=+1]
 
-endif::controller-UG[]
+//endif::controller-UG[]
 
