--- a/downstream/modules/platform/ref-controller-credential-centrify-vault.adoc
+++ b/downstream/modules/platform/ref-controller-credential-centrify-vault.adoc
@@ -3,4 +3,4 @@
 = Centrify Vault Credential Provider Lookup credential type
 
 This is considered part of the secret management capability.
-For more information, see xref:ref-centrify-vault-lookup[Centrify Vault Credential Provider Lookup].
+For more information, see TBD[Centrify Vault Credential Provider Lookup].
