--- a/downstream/modules/platform/ref-controller-credential-cyberark-central.adoc
+++ b/downstream/modules/platform/ref-controller-credential-cyberark-central.adoc
@@ -4,4 +4,4 @@
 
 This is considered part of the secret management capability. 
 
-For more information, see xref:ref-cyberark-ccp-lookup[CyberArk Central Credential Provider (CCP) Lookup].
+For more information, see TBD[CyberArk Central Credential Provider (CCP) Lookup].
