--- a/downstream/modules/platform/ref-controller-cluster-management.adoc
+++ b/downstream/modules/platform/ref-controller-cluster-management.adoc
@@ -2,7 +2,7 @@
 
 = Cluster management
 
-For more information on the `awx-manage provision_instance` and `awx-manage deprovision_instance` commands, see xref:controller-clustering[Clustering].
+For more information about the `awx-manage provision_instance` and `awx-manage deprovision_instance` commands, see xref:controller-clustering[Clustering].
 
 [NOTE]
 ====
