Make further changes to Controller Docs
Added links

Continue updating Controller docs

https://issues.redhat.com/browse/AAP-26692

--- a/downstream/modules/platform/proc-controller-create-job-template.adoc
+++ b/downstream/modules/platform/proc-controller-create-job-template.adoc
@@ -156,7 +156,7 @@ You must configure this in the settings on the webhook service in order for {Con
 +
 Before you can select it, the credential must exist.
 +
-See TBD[Credential Types] to create one.
+See xref:ref-controller-credential-types[Credential Types] to create one.
 ** For additional information about setting up webhooks, see xref:controller-work-with-webhooks[Working with Webhooks].
 * *Concurrent jobs*: If checked, you are allowing jobs in the queue to run simultaneously if not dependent on one another. Check this box if you want to run job slices simultaneously. For more information, see xref:controller-capacity-determination[{ControllerNameStart} capacity determination and job impact].
 * *Enable fact storage*: If checked, {ControllerName} stores gathered facts for all hosts in an inventory related to the job running.
