--- a/downstream/modules/platform/proc-controller-inv-source-open-shift-virt.adoc
+++ b/downstream/modules/platform/proc-controller-inv-source-open-shift-virt.adoc
@@ -14,7 +14,7 @@ To configure a Red Hat OpenShift Container Platform Virtualization, you need a v
 * The *Add new source* window expands with the required *Credential* field. 
 +
 Choose from an existing Kubernetes API Bearer Token credential. 
-For more information, see the TBD[OpenShift or Kubernetes API Bearer Token credential type] section. 
+For more information, see xref:ref-controller-credential-openShift[OpenShift or Kubernetes API Bearer Token credential type]. 
 In this example, the `cmv2.engineering.redhat.com` credential is used.
 . You can optionally specify the *Verbosity*, *Host Filter*, *Enabled Variable/Value*, and *Update options* as described in the xref:proc-controller-add-source[Adding a source] steps.
 . Use the *Source Variables* field to override variables used by the `kubernetes` inventory plugin. 
