--- a/downstream/modules/platform/ref-controller-credential-azure-key.adoc
+++ b/downstream/modules/platform/ref-controller-credential-azure-key.adoc
@@ -4,4 +4,4 @@
 
 This is considered part of the secret management capability. 
 
-For more information, see TBD[{Azure} Key Vault].
+For more information, see link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html-single/configuring_automation_execution/ref-azure-key-vault-lookup[{Azure} Key Vault].
