--- a/downstream/modules/platform/ref-controller-credential-hashiCorp-vault.adoc
+++ b/downstream/modules/platform/ref-controller-credential-hashiCorp-vault.adoc
@@ -4,4 +4,4 @@
 
 This is considered part of the secret management capability. 
 
-For more information, see TBD[HashiCorp Vault Signed SSH].
+For more information, see link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html-single/configuring_automation_execution/ref-hashicorp-signed-ssh[HashiCorp Vault Signed SSH].
