--- a/downstream/modules/platform/ref-controller-credential-types.adoc
+++ b/downstream/modules/platform/ref-controller-credential-types.adoc
@@ -39,4 +39,4 @@
 
 The credential types associated with AWS Secrets Manager, Centrify, CyberArk, HashiCorp Vault, {Azure} Key Vault, and Thycotic are part of the credential plugins capability that enables an external system to lookup your secrets information. 
 
-For more information, see TBD[Secrets Management System].
+For more information, see link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html-single/configuring_automation_execution/assembly-controller-secret-management[Secrets Management System].
