--- a/downstream/titles/controller/controller-user-guide/master.adoc
+++ b/downstream/titles/controller/controller-user-guide/master.adoc
@@ -72,5 +72,6 @@ include::platform/assembly-ug-controller-work-with-webhooks.adoc[leveloffset=+1]
 include::platform/assembly-ug-controller-setting-up-insights.adoc[leveloffset=+1]
 include::platform/assembly-controller-best-practices.adoc[leveloffset=+1]
 //RBAC contents to Donna's document, Jobs info to Jobs.
+//Moved to admin guide.
 //include::platform/assembly-controller-security.adoc[leveloffset=+1]
 include::platform/assembly-controller-glossary.adoc[leveloffset=+1]
