--- a/downstream/modules/platform/ref-controller-credential-thycotic-vault.adoc
+++ b/downstream/modules/platform/ref-controller-credential-thycotic-vault.adoc
@@ -4,4 +4,4 @@
 
 This is considered part of the secret management capability. 
 
-For more information, see TBD[Thycotic DevOps Secrets Vault].
+For more information, see link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html-single/configuring_automation_execution/ref-thycotic-devops-vault[Thycotic DevOps Secrets Vault].
