Make further changes to  Controller docs
Correction to conditional

Continue updating Controller docs

https://issues.redhat.com/browse/AAP-26692

--- a/downstream/modules/platform/ref-controller-instance-group-capacity.adoc
+++ b/downstream/modules/platform/ref-controller-instance-group-capacity.adoc
@@ -32,4 +32,4 @@ By setting the `max_forks value`, you can help prevent a scenario where too many
 
 To set the maximum values for the concurrent jobs and forks in an instance group, see 
 
-xref::controller-create-instance-group[Creating an instance group].
+xref:controller-create-instance-group[Creating an instance group].
