--- a/downstream/modules/platform/con-controller-container-groups.adoc
+++ b/downstream/modules/platform/con-controller-container-groups.adoc
@@ -16,4 +16,4 @@ Container groups upgraded from versions before {ControllerName} 4.0 revert back 
 ====
 
 Container groups are different from {ExecEnvShort}s in that {ExecEnvShort}s are container images and do not use a virtual environment. 
-For more information, see link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html-single/automation_controller_user_guide/index#assembly-controller-execution-environments[Execution environments] in _{ControllerUG}_.
+For more information, see xref:assembly-controller-execution-environments[Execution environments].
