--- a/downstream/modules/platform/proc-controller-create-instance-group.adoc
+++ b/downstream/modules/platform/proc-controller-create-instance-group.adoc
@@ -31,6 +31,7 @@ For more information, see xref:controller-instance-group-capacity[Instance group
 endif::controller-UG[]
 ifdef::operator-mesh[]
 For more information, see link:link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html-single/using_automation_execution/assembly-controller-secret-management#controller-instance-group-capacity[Instance group capacity limits].
+endif::operator-mesh[]
 ====
 
 . Click btn:[Create Instance Group], or, if you have edited an existing Instance Group click btn:[Save Instance Group]
