aap-20548: UI parity update for hub

--- a/downstream/assemblies/hub/assembly-managing-cert-valid-content.adoc
+++ b/downstream/assemblies/hub/assembly-managing-cert-valid-content.adoc
@@ -6,15 +6,14 @@ ifdef::context[:parent-context: {context}]
 :context: managing-cert-validated-content
 
 [role="_abstract"]
-{CertifiedName} are included in your subscription to {PlatformName}. Red Hat Ansible content includes two types of content: {CertifiedName} and {Valid}.
-Using {HubNameMain}, you can access and curate a unique set of collections from all forms of Ansible content.
+{CertifiedName} are included in your subscription to {PlatformName}. Using {HubNameMain}, you can access and curate a unique set of collections from all forms of Ansible content.
 
 Red Hat Ansible content contains two types of content:
 
 * {CertifiedName}
 * {Valid} collections
 
-Ansible validated collections are available in your {PrivateHubName} through the Platform Installer.
+Ansible validated collections are available in your {PrivateHubName} through the platform installer.
 When you download {PlatformName} with the bundled installer, validated content is pre-populated into the {PrivateHubName} by default, but only if you enable the {PrivateHubName} as part of the inventory.
 
 If you are not using the bundle installer, you can use a Red Hat supplied Ansible playbook to install validated content.
