AAP-20808 Peer review edits applied

--- a/downstream/modules/platform/con-hs-eda-controller.adoc
+++ b/downstream/modules/platform/con-hs-eda-controller.adoc
@@ -7,7 +7,7 @@ With {EDAcontroller}, you can set up horizontal scaling for your events automati
 The following node types are used in this deployment:
 
 API node type:: Responds to the HTTP REST API of {EDAcontroller}.
-Worker node type:: Runs an Event-Driven Ansible worker, which is the component of Event-Driven Ansible that not only manages projects and activations, but also executes the activations themselves.
+Worker node type:: Runs an {EDAName} worker, which is the component of Event-Driven Ansible that not only manages projects and activations, but also executes the activations themselves.
 Hybrid node type:: Is a combination of the API node and the worker node.
 
 The following example shows how you would set up an inventory file for horizontal scaling of {EDAcontroller} on {RHEL} VMs using the host group name `[automationedacontroller]` and the node type variable `eda_node_type`:
