Make further changes to Controller Docs
Corrections and readded Smart Inventories

Continue updating Controller docs

https://issues.redhat.com/browse/AAP-26692

--- a/downstream/modules/platform/proc-controller-define-filter-with-facts.adoc
+++ b/downstream/modules/platform/proc-controller-define-filter-with-facts.adoc
@@ -6,8 +6,8 @@ Use the following procedure to use `ansible_facts` to define the host filter whe
 
 .Procedure
 . From the navigation panel, select {MenuInfrastructureInventories}.
-. Select *Add Smart Inventory* from *Add* list.
-. In the *Create new smart inventory* page, click the image:search.png[Search,15,15] icon in the *Smart host filter* field.
+. Select *Create Smart Inventory* from *Create inventory* list.
+//. In the *Create Smart Inventory* page, click the image:search.png[Search,15,15] icon in the *Smart host filter* field.
 This opens a window to filter hosts for this inventory.
 +
 image:define_host_filter.png[Dfine host filter]
