--- a/downstream/modules/platform/proc-controller-inv-source-terraform.adoc
+++ b/downstream/modules/platform/proc-controller-inv-source-terraform.adoc
@@ -18,7 +18,7 @@ The plugin parses a terraform state file and add hosts for AWS EC2, GCE, and {Az
 . From the menu:Source[] menu, select *Terraform State*.
 * The *Add new source* window expands with the required *Credential* field. 
 +
-Choose from an existing Terraform backend configuration credential. For more information, see xref:ref-controller-credential-terraform[Terraform backend configuration].
+Choose an existing Terraform backend configuration credential. For more information, see xref:ref-controller-credential-terraform[Terraform backend configuration].
 . Enable the options to *Overwrite* and *Update on Launch*.
 . Use the *Source Variables* field to override variables used by the `terraform_state` inventory plugin. 
 Enter variables by using either JSON or YAML syntax. 
