--- a/downstream/assemblies/platform/assembly-controller-inventories.adoc
+++ b/downstream/assemblies/platform/assembly-controller-inventories.adoc
@@ -69,8 +69,8 @@ Click the Inventory name to display the *Details* page for the selected inventor
 inventory's groups and hosts.
 
 //Smart inventories are deprecated.
-//include::platform/ref-controller-smart-inventories.adoc[leveloffset=+1]
-//include::platform/ref-controller-smart-host-filter.adoc[leveloffset=+2]
+include::platform/ref-controller-smart-inventories.adoc[leveloffset=+1]
+include::platform/ref-controller-smart-host-filter.adoc[leveloffset=+2]
 //include::platform/proc-controller-define-filter-with-facts.adoc[leveloffset=+2]
 include::platform/ref-controller-constructed-inventories.adoc[leveloffset=+1]
 
