--- a/downstream/modules/platform/proc-controller-add-users-job-templates.adoc
+++ b/downstream/modules/platform/proc-controller-add-users-job-templates.adoc
@@ -6,11 +6,22 @@
 
 . From the navigation panel, select {MenuAECredentials}.
 . Select the credential that you want to assign to additional users.
-. Click the *Access* tab.
+. Click the *User Access* tab.
 You can see users and teams associated with this credential and their roles.
-. Choose a user and click btn:[Add].
 If no users exist, add them from the *Users* menu.
-For more information, see xref:assembly-controller-users[Users].
-. Select *Job Templates* to display the job templates associated with this credential, and which jobs have run recently by using this credential.
-. Choose a job template and click btn:[Add] to assign the credential to additional job templates.
+For more information, see TBD[Users].
+. Select the user(s) that you want to give access to the credential and click btn:[Next].
+. From the *Select roles to apply* page, select the roles you want to add to the User.
+. Click btn:[Next].
+. Review your selections and click btn:[Finish] to add the roles or click btn:[Back] to make changes.
++
+The *Add roles* window displays stating whether the action was succesful.
++
+If the action is not successful, a warning displays.
++ 
+. Click btn:[Close]. 
+. The *User Access* page displays the summary information.
+. Select the *Job templates* tab to choose a job template to which you want to assign this credential.
+. Chose a job template or select *Create job template* from the *Create template* list to assign the credential to additional job templates.
++
 For more information about creating new job templates, see the xref:controller-job-templates[Job templates] section.
