--- a/downstream/modules/platform/proc-controller-create-credential.adoc
+++ b/downstream/modules/platform/proc-controller-create-credential.adoc
@@ -1,13 +1,13 @@
-[id="controller-getting-started-create-credential"]
+[id="controller-create-credential"]
 
 = Creating new credentials
-ifdef::controller-GS[]
-As part of the initial setup, a demonstration credential and a Galaxy credential have been created for your use. Use the Galaxy credential as a template.
-It can be copied, but not edited.
-You can add more credentials as necessary.
-endif::controller-GS[]
+//ifdef::controller-GS[]
+//As part of the initial setup, a demonstration credential and a Galaxy credential have been created for your use. Use the Galaxy credential as a template.
+//It can be copied, but not edited.
+//You can add more credentials as necessary.
+//endif::controller-GS[]
 
-ifdef::controller-UG[]
+//ifdef::controller-UG[]
 Credentials added to a team are made available to all members of the team.
 You can also add credentials to individual users.
 
@@ -15,42 +15,38 @@ As part of the initial setup, two credentials are available for your use: Demo C
 Use the Ansible Galaxy credential as a template.
 You can copy this credential, but not edit it.
 Add more credentials as needed.
-endif::controller-UG[]
+//endif::controller-UG[]
 
 .Procedure
 . From the navigation panel, select {MenuAECredentials}.
-ifdef::controller-GS[]
-. To add a new credential, see link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html-single/automation_controller_user_guide/index#controller-getting-started-create-credential[Creating a credential] in _{ControllerUG}_.
-+
-[NOTE]
-====
-When you set up additional credentials, the user you assign must have root access or be able to use SSH to connect to the host machine.
-====
-+
-. Click btn:[Demo Credential] to view its details.
+//ifdef::controller-GS[]
+//. To add a new credential, see link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html-single/automation_controller_user_guide/index#controller-getting-started-create-credential[Creating a credential] in _{ControllerUG}_.
+//+
+//[NOTE]
+//====
+//When you set up additional credentials, the user you assign must have root access or be able to use SSH to connect to the host machine.
+//====
+//+
+//. Click btn:[Demo Credential] to view its details.
 
-image::controller-credentials-demo-details.png[Demo Credential]
-endif::controller-GS[]
-ifdef::controller-UG[]
-. Click btn:[Add].
-+
+//image::controller-credentials-demo-details.png[Demo Credential]
+//endif::controller-GS[]
+//ifdef::controller-UG[]
+. On the *Credentials* page, click btn:[Create credential].
+//+
 //image:credentials-create-credential.png[Credentials-create]
 . Enter the following information:
-* The name for your new credential.
-* Optional: a description for the new credential.
-* Optional: The name of the organization with which the credential is associated.
-+
-[NOTE]
-====
-A credential with a set of permissions associated with one organization persists if the credential is reassigned to another
-organization.
-====
-. In the *Credential Type* field, enter or select the credential type you want to create.
-+
-//image:credential-types-drop-down-menu.png[Credential types]
+* *Name*: the name for your new credential.
+* (Optional) *Description*: a description for the new credential.
+* Optional *Organization*: The name of the organization with which the credential is associated. The default is *Default*.
+* *Credential Type*: enter or select the credential type you want to create.
 
 . Enter the appropriate details depending on the type of credential selected, as described in xref:ref-controller-credential-types[Credential types].
-. Click btn:[Save].
++
+image:credential-types-drop-down-menu.png[Credential types drop down list]
 
 
-endif::controller-UG[]
+. Click btn:[Create credential].
+
+//You can also use this procedure from the *Credentials* tab when you select a credential type on the *Credential Types* page. Not sure how to document that, it should be a single route. 
+//endif::controller-UG[]
