--- a/downstream/modules/platform/proc-controller-create-instance-group.adoc
+++ b/downstream/modules/platform/proc-controller-create-instance-group.adoc
@@ -26,7 +26,12 @@ If you do not specify values, then the *Policy instance minimum* and *Policy ins
 [NOTE]
 ====
 The default value of 0 for *Max concurrent jobs* and *Max forks* denotes no limit.
+ifdef::controller-UG[]
 For more information, see xref:controller-instance-group-capacity[Instance group capacity limits].
+endif::controller-UG[]
+ifdef::operator-mesh[]
+For more information, see link:link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html-single/using_automation_execution/assembly-controller-secret-management#controller-instance-group-capacity[Instance group capacity limits].
+endif::operator-mesh[]
 ====
 
 . Click btn:[Create Instance Group], or, if you have edited an existing Instance Group click btn:[Save Instance Group]
