--- a/downstream/modules/platform/ref-controller-credential-hashiCorp-secret.adoc
+++ b/downstream/modules/platform/ref-controller-credential-hashiCorp-secret.adoc
@@ -4,4 +4,4 @@
 
 This is considered part of the secret management capability.
  
-For more information, see xref:ref-hashicorp-vault-lookup[HashiCorp Vault Secret Lookup].
+For more information, see link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html-single/configuring_automation_execution/assembly-controller-secret-management#ref-hashicorp-vault-lookup[HashiCorp Vault Secret Lookup].
