--- a/downstream/modules/platform/ref-controller-credential-terraform.adoc
+++ b/downstream/modules/platform/ref-controller-credential-terraform.adoc
@@ -8,7 +8,7 @@ Terraform is a HashiCorp tool used to automate various infrastructure tasks.
 Select this credential type to enable synchronization with the Terraform inventory source.
 
 The Terraform credential requires the *Backend configuration* attribute which must contain the data from a link:https://developer.hashicorp.com/terraform/language/settings/backends/configuration[Terraform backend block]. 
-You can paste, drag a file, browse to upload a file, or click the image:leftkey.png[Key,15,15] icon to populate the field from an external xref:assembly-controller-secret-management[Secret Management System].
+You can paste, drag a file, browse to upload a file, or click the image:leftkey.png[Key,15,15] icon to populate the field from an external link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html-single/configuring_automation_execution/assembly-controller-secret-management[Secret Management System].
 
 Terraform backend configuration requires the following inputs:
 
