--- a/downstream/assemblies/hub/assembly-syncing-to-cloud-repo.adoc
+++ b/downstream/assemblies/hub/assembly-syncing-to-cloud-repo.adoc
@@ -16,11 +16,11 @@ Remotes are configurations that allow you to synchronize content to your custom 
 == What’s the difference between {Galaxy} and {HubNameMain}?
 
 Collections published to {Galaxy} are the latest content published by the Ansible community and have no joint support claims associated with them. 
-{Galaxy} is the recommended frontend directory for the Ansible community accessing content.
+{Galaxy} is the recommended frontend directory for the Ansible community to access content.
 
-Collections published to {HubNameMain} are targeted for joint customers of Red Hat and selected partners. 
+Collections published to {HubNameMain} are targeted to joint customers of Red Hat and selected partners. 
 Customers need an Ansible subscription to access and download collections on {HubNameMain}. 
-A certified collection means that Red Hat and partners have a strategic relationship in place and are ready to support joint customers, and may have had additional testing and validation done against them.
+A certified collection means that Red Hat and partners have a strategic relationship in place and are ready to support joint customers, and that the collections may have had additional testing and validation done against them.
 
 [discrete]
 == How do I request a namespace on {Galaxy}?
@@ -37,7 +37,7 @@ After users are added as administrators of the namespace, you can use the self-s
 [discrete]
 == Are there any restrictions for {Galaxy} namespace naming?
 
-Collection namespaces must follow python module name convention. 
+Collection namespaces must follow Python module name convention. 
 This means collections should have short, all lowercase names. 
 You can use underscores in the collection name if it improves readability.
 
