updates to aap-common modules and some SME suggestions

--- a/stories/topics/proc-saas-set-up-private.adoc
+++ b/stories/topics/proc-saas-set-up-private.adoc
@@ -1,6 +1,6 @@
 [id="proc-saas-set-up-private"]
 
-= Subscribing to an {SaaSonAWS} private offer
+= Subscribing to a {SaaSonAWS} private offer
 A private offer has pricing and licensing terms specifically offered to your account.
 The offer has a set expiration date, if you do not accept the private offer by the expiration date, you are either automatically moved to the product's public offer or no longer subscribed to the product.
 
@@ -18,7 +18,6 @@ The offer has a set expiration date, if you do not accept the private offer by t
 This account ID must be the account ID that purchased the offer from the AWS marketplace. The system will not recognize associated or nested accounts.
 . Once your AWS ID is validated click btn:[Next].
 . Select your desired region.
-. Enter your email address. You will receive a notification at this email when your environment is ready.
 . Click btn:[Provision].
 
 This redirects you to the *Instances* page which displays all the details of the instance you created. From here you can confirm if your instance is *Assigned* or still in a *Pending* state.
