--- a/stories/topics/ref-saas-default-configs.adoc
+++ b/stories/topics/ref-saas-default-configs.adoc
@@ -1,5 +1,5 @@
 [id="ref-saas-default-configs"]
-= Default configurations in {SaaSonAWSShort}
+= Default configurations in {SaaSonAWS}
 The initial configuration of {PlatformNameShort} includes the control node container group and mesh ingress hop nodes. 
 It does not include execution nodes or connectivity to an OpenShift cluster that operates as the execution plane. 
 By default the only automation job available and supported is the *Demo Job Template* provided for simple testing.
