Correct Vale errors in our aap-docs
Some errors of note that should be resolved as part of this ticket:

- Keep one space between words
- Use 'Ansible Playbook' rather than 'Ansible playbook'.
- Use 'before' rather than 'prior to'.
- Use 'built-in' rather than 'built in'.
- Use 'checkbox' rather than 'check box'.
- Use 'environment' rather than 'ENV'.
- Use 'includes' rather than 'ships with'.
- Use 'log in to' rather than 'Log into'.
- Use 'pop-up' rather than 'popup'.
- Use 'want' rather than 'wish'.

Correct Vale errors in our aap-docs

https://issues.redhat.com/browse/AAP-24651

--- a/downstream/modules/dev-guide/proc-select-custom-venv-export.adoc
+++ b/downstream/modules/dev-guide/proc-select-custom-venv-export.adoc
@@ -3,7 +3,7 @@
 = Selecting the custom virtual environment to export
 
 [role="_abstract"]
-Select the custom virtual environment you wish to export using `awx-manage export_custom_venv` command.
+Select the custom virtual environment you want to export by using `awx-manage export_custom_venv` command.
 
 .Procedure
 
