--- a/downstream/modules/hub/proc-pushing-container-images-from-your-local.adoc
+++ b/downstream/modules/hub/proc-pushing-container-images-from-your-local.adoc
@@ -6,7 +6,7 @@
 Use the following procedure to sign images on a local system and push those signed images to the {HubName} registry.
 
 .Procedure
-. From a terminal, log into podman, or any container client currently in use:
+. From a terminal, log in to Podman, or any container client currently in use:
 +
 ----
 > podman pull <container-name>
