--- a/downstream/modules/platform/proc-aap-activate-with-manifest.adoc
+++ b/downstream/modules/platform/proc-aap-activate-with-manifest.adoc
@@ -3,7 +3,7 @@
 
 = Activate with a manifest file
 
-If you have a subscriptions manifest, you can upload the manifest file either using the {PlatformName} interface or manually in an Ansible playbook.
+If you have a subscriptions manifest, you can upload the manifest file either by using the {PlatformName} interface or manually in an Ansible Playbook.
 
 .Prerequisites
 You must have a Red Hat Subscription Manifest file exported from the Red Hat Customer Portal. For more information, see xref:assembly-aap-obtain-manifest-files[Obtaining a manifest file].
@@ -25,7 +25,7 @@ If the btn:[BROWSE] button is disabled on the License page, clear the *USERNAME*
 
 .Uploading manually
 
-If you are unable to apply or update the subscription info using the {PlatformName} interface, you can upload the subscriptions manifest manually in an Ansible playbook using the `license` module in the `ansible.controller` collection.
+If you are unable to apply or update the subscription information by using the {PlatformName} interface, you can upload the subscriptions manifest manually in an Ansible Playbook by using the `license` module in the `ansible.controller` collection.
 
 -----
 - name: Set the license using a file
