--- a/downstream/modules/platform/proc-controller-adding-subscription-manually.adoc
+++ b/downstream/modules/platform/proc-controller-adding-subscription-manually.adoc
@@ -2,7 +2,7 @@
 
 = Add a subscription manually
 
-If you are unable to apply or update the subscription information by using the {ControllerName} user interface, you can upload the subscriptions manifest manually in an Ansible playbook.
+If you are unable to apply or update the subscription information by using the {ControllerName} user interface, you can upload the subscriptions manifest manually in an Ansible Playbook.
 
 Use the license module in the `ansible.controller` collection:
 
