--- a/downstream/modules/platform/proc-controller-run-job-template.adoc
+++ b/downstream/modules/platform/proc-controller-run-job-template.adoc
@@ -2,8 +2,8 @@
 
 = Running a job template
 
-A benefit of {ControllerName} is the push-button deployment of Ansible playbooks.
-You can configure a template to store all the parameters that you would normally pass to the Ansible playbook on the command line.
+A benefit of {ControllerName} is the push-button deployment of Ansible Playbooks.
+You can configure a template to store all the parameters that you would normally pass to the Ansible Playbook on the command line.
 In addition to the playbooks, the template passes the inventory, credentials, extra variables, and all options and settings that you can specify on the command line.
 
 .Procedure
