--- a/downstream/modules/platform/proc-deprovision-group.adoc
+++ b/downstream/modules/platform/proc-deprovision-group.adoc
@@ -16,7 +16,7 @@ You can deprovision any hosts in your inventory except for the first host specif
 
 .Procedure
 
-* Add `*node_state=deprovision*` to the [group:vars] associated with the group you wish to deprovision.
+* Add `*node_state=deprovision*` to the [group:vars] associated with the group you want to deprovision.
 
 
 .Example
