--- a/downstream/modules/platform/ref-controller-audit-functionality.adoc
+++ b/downstream/modules/platform/ref-controller-audit-functionality.adoc
@@ -3,9 +3,9 @@
 = Audit and logging functionality
 
 For any administrative access, it is important to audit and watch for actions. 
-For the system overall, you can do this through the built in audit support and the built-in logging support.
+For the system overall, you can do this through the built-in audit support and the built-in logging support.
 
-For {ControllerName}, you can do this through the built-in Activity Stream support that logs all changes within {ControllerName}, as well as through the automation logs.
+For {ControllerName}, you can do this through the built-in Activity Stream support that logs all changes within {ControllerName}, and through the automation logs.
 
 Best practices dictate collecting logging and auditing centrally rather than reviewing it on the local system. 
 You must configure {ControllerName} to use standard IDs or logging and auditing (Splunk) in your environment. 
