--- a/downstream/modules/platform/ref-controller-change-admin-password.adoc
+++ b/downstream/modules/platform/ref-controller-change-admin-password.adoc
@@ -2,8 +2,8 @@
 
 = Change the {ControllerName} Administrator Password
 
-During the installation process, you are prompted to enter an administrator password which is used for the `admin` superuser or system administrator created by {ControllerName}. 
-If you log into the instance using SSH, it tells you the default administrator password in the prompt. 
+During the installation process, you are prompted to enter an administrator password that is used for the `admin` superuser or system administrator created by {ControllerName}. 
+If you log in to the instance by using SSH, it tells you the default administrator password in the prompt. 
 
 If you need to change this password at any point, run the following command as root on the {ControllerName} server:
 
