--- a/downstream/modules/platform/ref-controller-internal-services.adoc
+++ b/downstream/modules/platform/ref-controller-internal-services.adoc
@@ -6,7 +6,7 @@
 
 PostgreSQL database::
 The connection to the PostgreSQL database is done by password authentication over TCP, either through localhost or remotely (external database). 
-This connection can use PostgreSQL's built in support for SSL/TLS, as natively configured by the installer support. 
+This connection can use PostgreSQL's built-in support for SSL/TLS, as natively configured by the installer support. 
 SSL/TLS protocols are configured by the default OpenSSL configuration.
 
 A Redis key or value store::
