--- a/downstream/modules/platform/proc-installing-the-ansible-builder-rpm.adoc
+++ b/downstream/modules/platform/proc-installing-the-ansible-builder-rpm.adoc
@@ -17,7 +17,7 @@ On the RHEL system where custom {ExecEnvShort}s will be built, you will install 
 
 .. Subscribe the RHEL system to a Satellite on the disconnected network.
 
-.. Attach the {PlatformNameShort} subscription and enable the {PlatformNameShort} repository. The repository name will either be `ansible-automation-platform-2.4-for-rhel-8-x86_64-rpms` or `ansible-automation-platform-2.4-for-rhel-9-x86_64-rpms` depending on the version of RHEL used on the underlying system.
+.. Attach the {PlatformNameShort} subscription and enable the {PlatformNameShort} repository. The repository name is either `ansible-automation-platform-2.4-for-rhel-8-x86_64-rpms` or `ansible-automation-platform-2.4-for-rhel-9-x86_64-rpms` depending on the version of RHEL used on the underlying system.
 
 .. Install the {Builder} RPM. The version of the {Builder} RPM must be 3.0.0 or later in order for the examples below to work properly.
 
