Correct Vale errors in our aap-docs (#1614)
* Correct Vale errors in our aap-docs

Some errors of note that should be resolved as part of this ticket:

- Keep one space between words
- Use 'Ansible Playbook' rather than 'Ansible playbook'.
- Use 'before' rather than 'prior to'.
- Use 'built-in' rather than 'built in'.
- Use 'checkbox' rather than 'check box'.
- Use 'environment' rather than 'ENV'.
- Use 'includes' rather than 'ships with'.
- Use 'log in to' rather than 'Log into'.
- Use 'pop-up' rather than 'popup'.
- Use 'want' rather than 'wish'.

Correct Vale errors in our aap-docs

https://issues.redhat.com/browse/AAP-24651

* updates based on peer review feedback

--- a/downstream/modules/platform/proc-creating-the-custom-execution-environment-definition.adoc
+++ b/downstream/modules/platform/proc-creating-the-custom-execution-environment-definition.adoc
@@ -97,7 +97,7 @@ trusted-host = <pypi_mirror_fqdn>
 ----
 +
 
-. Optional: If a `bindep.txt` file is being used to add RPMs the custom {ExecEnvShort}, create a `custom.repo` file under the `files/` subdirectory that points to your disconnected Satellite or other location hosting the RPM repositories. If this step is necessary, uncomment the steps in the example `execution-environment.yml` file that correspond with the `custom.repo` file.
+. Optional: If you use a `bindep.txt` file to add RPMs the custom {ExecEnvShort}, create a `custom.repo` file under the `files/` subdirectory that points to your disconnected Satellite or other location hosting the RPM repositories. If this step is necessary, uncomment the steps in the example `execution-environment.yml` file that correspond with the `custom.repo` file.
 +
 
 The following example is for the UBI repos. Other local repos can be added to this file as well. The URL path may need to change depending on where the mirror content is located on the web server. 
