--- a/downstream/modules/platform/proc-installing-the-ansible-builder-rpm.adoc
+++ b/downstream/modules/platform/proc-installing-the-ansible-builder-rpm.adoc
@@ -8,7 +8,7 @@
 [role="_abstract"]
 
 
-On the RHEL system where custom {ExecEnvShort}s will be built, you will install the {Builder} RPM using a Satellite Server that already exists in the environment. This method is preferred because the {ExecEnvShort} images can use any RHEL content from the pre-existing Satellite if required.
+On the RHEL system where custom {ExecEnvShort}s will be built, you will install the {Builder} RPM by using a Satellite Server that already exists in the environment. This method is preferred because the {ExecEnvShort} images can use any RHEL content from the pre-existing Satellite if required.
 
 
 .Procedure
@@ -17,11 +17,11 @@ On the RHEL system where custom {ExecEnvShort}s will be built, you will install 
 
 .. Subscribe the RHEL system to a Satellite on the disconnected network.
 
-.. Attach the {PlatformNameShort} subscription and enable the AAP repository.  The repository name will either be `ansible-automation-platform-2.4-for-rhel-8-x86_64-rpms` or `ansible-automation-platform-2.4-for-rhel-9-x86_64-rpms` depending on the version of RHEL used on the underlying system.
+.. Attach the {PlatformNameShort} subscription and enable the {PlatformNameShort} repository. The repository name is either `ansible-automation-platform-2.4-for-rhel-8-x86_64-rpms` or `ansible-automation-platform-2.4-for-rhel-9-x86_64-rpms` depending on the version of RHEL used on the underlying system.
 
-.. Install the {Builder} RPM.  The version of the {Builder} RPM must be 3.0.0 or later in order for the examples below to work properly.
+.. Install the {Builder} RPM. The version of the {Builder} RPM must be 3.0.0 or later in order for the examples below to work properly.
 
-. Install the {Builder} RPM from the {PlatformNameShort} setup bundle.  Use this method if a Satellite server is not available on your disconnected network.
+. Install the {Builder} RPM from the {PlatformNameShort} setup bundle. Use this method if a Satellite Server is not available on your disconnected network.
 
 .. Unarchive the {PlatformNameShort} setup bundle.
 
