--- a/downstream/modules/platform/proc-controller-adding-new-inventory.adoc
+++ b/downstream/modules/platform/proc-controller-adding-new-inventory.adoc
@@ -54,9 +54,11 @@ Select the verbosity from:
 * *Connection Debug* 
 * *WinRM Debug* 
 
-This only appears in the "details" report view.
 ** *Verbose* logging includes the output of all commands.
+** *More verbose* provides more detail than *Verbose*.
 ** *Debug* logging is exceedingly verbose and includes information about SSH operations that can be useful in certain support instances. Most users do not need to see debug mode output.
+** *Connection Debug* TBD
+** *WinRM Debug* used for verbosity specific to windows remote management 
 +
 Click the image:arrow.png[Expand,15,15] icon for information on *How to use the constructed inventory plugin*
 * Only applicable to constructed inventories: *Limit*: Restricts the number of returned hosts for the inventory source associated with the constructed inventory.
