Update module on creating an inventory
Additional infornmation

Correct section on creating host filters

https://issues.redhat.com/browse/AAP-27447

--- a/downstream/modules/platform/proc-controller-adding-new-inventory.adoc
+++ b/downstream/modules/platform/proc-controller-adding-new-inventory.adoc
@@ -57,7 +57,8 @@ Select the verbosity from:
 ** *Verbose* logging includes the output of all commands.
 ** *More verbose* provides more detail than *Verbose*.
 ** *Debug* logging is exceedingly verbose and includes information about SSH operations that can be useful in certain support instances. Most users do not need to see debug mode output.
-** *Connection Debug* TBD
+** *Connection Debug* enables you to run ssh in verbose mode, providing debugging information about the SSH connection progress. TBD
+//Not sure of this. 
 ** *WinRM Debug* used for verbosity specific to windows remote management 
 +
 Click the image:arrow.png[Expand,15,15] icon for information on *How to use the constructed inventory plugin*
