--- a/lightspeed/modules/proc_troubleshooting-lightspeed-onpremise-config.adoc
+++ b/lightspeed/modules/proc_troubleshooting-lightspeed-onpremise-config.adoc
@@ -17,3 +17,15 @@ This error indicates an incorrect configuration of the login redirect URI. The r
 `https://lightspeed-on-prem-web-service.com/complete/aap/`
 +
 For more details, For more information, see xref:update-redirect-uri_configuring-lightspeed-onpremise[Updating the Redirect URIs].
+
+* The log-in attempt fails with the following error message:
++
+`Error: invalid_request`
++
+`Invalid client_id parameter value`
++
+This error indicates an incorrect configuration of the login redirect URI. The redirect URI parameter must contain the URL of the Red Hat Ansible Lightspeed instance along with  with `/complete/aap/` suffix. The following is an example of the login redirect URI:
++
+`https://lightspeed-on-prem-web-service.com/complete/aap/`
++
+For more details, For more information, see xref:update-redirect-uri_configuring-lightspeed-onpremise[Updating the Redirect URIs].
