AAP-26663-edits updated section 2.3.3

--- a/downstream/modules/aap-hardening/ref-apply-defensive-security-controls.adoc
+++ b/downstream/modules/aap-hardening/ref-apply-defensive-security-controls.adoc
@@ -37,7 +37,7 @@ See link:https://docs.redhat.com/en/documentation/red_hat_enterprise_linux/8/htm
 -w /etc/redis/ -p war -k aap-aac-mon-redis
 -----
 
-. In {HubName}, create the file `/etc/audit/rules.d/75-automation-hub.rules` with the following content, then run `augenrules --load` to load the new rules:
+.. In {HubName}, create the file `/etc/audit/rules.d/75-automation-hub.rules` with the following content, then run `augenrules --load` to load the new rules:
 
 -----
 -w /etc/pulp/ -p warx -k aap-hub-mon-confdir
